# Game-P2P-Cop-Chase

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
config/police/: game.json  game.toml
config/thief/: game.toml  rate_limits.json
docs/: PLAN-GUI-CONTROL-CHANNEL.md  PLAN.md  RESEARCH-REPORT-Performance-Analysis.md  STRATEGY.md  UPGRADE-4JSON-PLAN.md  UPGRADE-4JSON-TODO.md
docs/sample-run/: config_segal-police-team-vs-segal-thief-team_g01.json  declaration_segal-police-team-vs-segal-thief-team.json  log_segal-police-team-vs-segal-thief-team_g01.json  result_segal-police-team-vs-segal-thief-team.json
scripts/: render_docs_images.py  sync_versions.py
src/police_thief/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py
tests/: conftest.py
tests/integration/: test_mcp_match.py
tests/unit/: test_artifacts.py  test_belief.py  test_board.py  test_brains.py  test_cli.py  test_config.py  test_control_link.py  test_control_message.py  test_crypto.py  test_deadline_controls.py  test_email_sender.py  test_game_mode.py  test_gatekeeper.py  test_live_apply.py  test_live_controls.py  test_llm_provider.py  test_negotiation.py  test_own_state.py  test_port_check.py  test_prompt_discussion.py  test_protocol.py  test_rate_limiter.py  test_replay_data.py  test_replay_normalize.py  test_report_writer.py  test_rules.py  test_runtime.py  test_runtime_control.py  test_scoring.py  test_sdk.py  test_series.py  test_smell.py  test_strategy.py  test_sysinfo.py  test_transport_drain.py  test_trash_talk.py  test_turn_handler.py
(+56 files in other folders)
