[project]
name = "police-thief"
version = "2.0.1"
description = "Distributed Cop-vs-Thief autonomous AI simulation with MCP, claude -p, crypto commit-reveal, and a Tkinter replay player"
readme = "README.md"
authors = [
    { name = "Dr. Yoram Segal / Gal Technologies Artificial Intelligence Ltd. (GTAI)", email = "segal@gal-tech.ai" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.3",
]

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: long-running integration tests (real MCP servers)"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__main__.py",
    "*/gui/*",
    "*/infra/mcp_server.py",
    "*/infra/mcp_client.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
